--- a/MinaClient/.classpath
+++ b/MinaClient/.classpath
@@ -4,6 +4,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="libs/json-20160810.jar"/>
 	<classpathentry kind="lib" path="libs/mina-core-2.0.16.jar"/>
-	<classpathentry kind="lib" path="libs/slf4j-api-1.7.21.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-log4j12-1.7.25.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-api-2.8.1.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-core-2.8.1.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-1.2-api-2.8.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
